--- a/ios/Runner/GoogleService-Info.plist
+++ b/ios/Runner/GoogleService-Info.plist
@@ -2,6 +2,10 @@
 <!DOCTYPE plist PUBLIC "-//Apple//DTD PLIST 1.0//EN" "http://www.apple.com/DTDs/PropertyList-1.0.dtd">
 <plist version="1.0">
 <dict>
+	<key>CLIENT_ID</key>
+	<string>442921103843-reqo9r117albf25rds7dt9551ackif3m.apps.googleusercontent.com</string>
+	<key>REVERSED_CLIENT_ID</key>
+	<string>com.googleusercontent.apps.442921103843-reqo9r117albf25rds7dt9551ackif3m</string>
 	<key>API_KEY</key>
 	<string>AIzaSyBfHAreENAggHQU46Cbm6tpZssatmhosqE</string>
 	<key>GCM_SENDER_ID</key>
